# CMakeOpencvAsExternalProject

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeUserPresets.json  README.md
cmake/: 3rdparty_utils.cmake  buildOpenCV.cmake
src/: CMakeLists.txt  helloopencv.cpp
